# Linera

./: .gitignore  .replit  CHANGELOG.md  LICENSE  README.md  Read.md  build-contracts.sh  netlify.toml  replit.md  setup-linera.sh  vercel.json
agentchain/: Cargo.toml
agentchain/src/: contract.rs  lib.rs  service.rs  state.rs
attached_assets/: Pasted-Don-t-start-building-anything-untill-i-say-Build-ok-this-is-about-event-that-Build-Real-Time-O-1761592973645_1761592973646.txt  Pasted-error-linking-with-cc-failed-exit-status-1-note-cc-m64-tmp-rustc6PD8lY-symbo-1761674986794_1761674986795.txt  Pasted-error-linking-with-clang-failed-exit-status-1-note-clang-m64-tmp-rustc0mWjW0-1761677847925_1761677847926.txt
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FEATURE_ROADMAP.md  INTEGRATION.md  README.md  STEP_BY_STEP_DEPLOYMENT.md
web/: .env.example  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/execute-operation/: route.ts
web/src/components/: AgentMarketplace.tsx  CreateAgent.tsx  Dashboard.tsx  Header.tsx  OnboardingTour.tsx
web/src/lib/: graphql.ts  lineraClient.ts  utils.ts
