[package]
name = "agentchain"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
async-graphql = "7.0"
async-trait = "0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
strip = true

[[bin]]
name = "agentchain-contract"
path = "src/contract.rs"

[[bin]]
name = "agentchain-service"
path = "src/service.rs"
